Changes to ci.yaml file

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,6 +13,13 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v2
 
+      # Compute the package score
+      - name: Compute package score
+        uses: axel-op/dart-package-analyzer@v2
+        id: analysis
+        with:
+          githubToken: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Install Flutter
         uses: subosito/flutter-action@v1
         with:
@@ -28,19 +35,3 @@ jobs:
       # Run Code Analysis
       - name: Code Analysis
         run: flutter analyze
-  package-score:
-    name: Evaluate package score
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Check out code
-        uses: actions/checkout@v2
-
-      - name: Compute package score
-        uses: axel-op/dart-package-analyzer@v2
-        id: analysis
-        with:
-          githubToken: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Print score
-        run: echo "${{ steps.analysis.outputs.health }}"
